# schemes

./: .gitignore  Dockerfile  models.py  pyproject.toml
data/documents/: erot.json
docker/: .dockerignore  Dockerfile  config.json  docker-compose.yaml
docker/app/: Dockerfile  config.json  requirements.txt
schemes/documents/: erot.json  gisok.json
src/: main.py  model.py
src/api/: exceptions.py  handler.py  types.py
src/api/scheme/: __init__.py  workbook.py
src/api/schemes/: __init__.py  workbook.py
src/config/: service.py
src/core/: handler.py  loader.py
src/core/schemes/: __init__.py  workbook.py
src/service/: asgi.py  wsgi.py
src/service/models/: scheme.py
src/service/routes/: schemes.py  validation.py  workbooks.py
src/service/schema/: scheme.py  validation.py
src/service/schemas/: scheme.py
tests/: test_loader.py  test_oc_schemes.py  test_scheme.py  test_simple.py  test_workbook.py
