[tool.poetry]
name = "OC_schemes"
version = "0.1.0"
description = ""
authors = ["rsaleev <rs.aleev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cachetools = "^4.2.4"
PyYAML = "^6.0"
aiofiles = "^0.8.0"
fastapi = "^0.70.0"
python-dateutil = "^2.8.2"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
uvicorn = "^0.16.0"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
